--- a/src/pyspark_files/pipeline_pyspark_test.ipynb
+++ b/src/pyspark_files/pipeline_pyspark_test.ipynb
@@ -7,16 +7,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import udf, when, col, cast, explode, row_number, sum as F_sum\n",
+    "from pyspark.sql.functions import udf, col, explode, row_number, sum as F_sum\n",
     "from pyspark.sql.window import Window\n",
-    "from pyspark.sql.types import BooleanType, StringType, DoubleType\n",
+    "from pyspark.sql.types import BooleanType\n",
     "from pyspark.sql import SparkSession\n",
     "from pathlib import Path\n",
     "import os\n",
-    "import glob\n",
     "\n",
     "# Création d'une SparkSession locale\n",
-    "spark = SparkSession.builder.appName(\"TutoDataFrame_PySpark\").master(\"local[*]\").getOrCreate()\n",
+    "spark = (\n",
+    "    SparkSession.builder.appName(\"TutoDataFrame_PySpark\")\n",
+    "    .master(\"local[*]\")\n",
+    "    .getOrCreate()\n",
+    ")\n",
     "\n",
     "# SparkContext, pour la partie comparaison RDD\n",
     "sc = spark.sparkContext"
@@ -31,16 +34,16 @@
    "source": [
     "# Chargement des fichiers data\n",
     "dir_path = Path.cwd().parent.parent / \"data/march-input\"\n",
-    "orders_file_list = [x for x in os.listdir(dir_path) if x.startswith('orders')]\n",
-    "orders_paths = [str(dir_path/x) for x in orders_file_list]\n",
+    "orders_file_list = [x for x in os.listdir(dir_path) if x.startswith(\"orders\")]\n",
+    "orders_paths = [str(dir_path / x) for x in orders_file_list]\n",
     "\n",
     "if not os.path.exists(dir_path):\n",
     "    print(\"Pas de dossier data/march-input à ce chemin :\", dir_path)\n",
-    "if os.listdir(dir_path)==[]:\n",
+    "if os.listdir(dir_path) == []:\n",
     "    print(\"Le dossier data/march-input est vide :\", dir_path)\n",
     "\n",
-    "customers_file = dir_path/\"customers.csv\"\n",
-    "refunds_file = dir_path/\"refunds.csv\"\n",
+    "customers_file = dir_path / \"customers.csv\"\n",
+    "refunds_file = dir_path / \"refunds.csv\"\n",
     "print(orders_file_list)\n",
     "\n",
     "orders_df = spark.read.option(\"multiline\", \"true\").json(orders_paths)\n",
@@ -54,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_paths = [str(dir_path/x) for x in orders_file_list]"
+    "orders_paths = [str(dir_path / x) for x in orders_file_list]"
    ]
   },
   {
@@ -64,8 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "refunds_df = spark.read.csv(str(dir_path/refunds_file), header= True, inferSchema= True)\n",
-    "customers_df = spark.read.csv(str(dir_path/customers_file), header= True, inferSchema= True)"
+    "refunds_df = spark.read.csv(str(dir_path / refunds_file), header=True, inferSchema=True)\n",
+    "customers_df = spark.read.csv(\n",
+    "    str(dir_path / customers_file), header=True, inferSchema=True\n",
+    ")"
    ]
   },
   {
@@ -81,8 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dir_path/orders_file_list[0])\n",
-    "df = spark.read.csv(str(dir_path/orders_file_list[0]), header= True, inferSchema= True)"
+    "print(dir_path / orders_file_list[0])\n",
+    "df = spark.read.csv(str(dir_path / orders_file_list[0]), header=True, inferSchema=True)"
    ]
   },
   {
@@ -93,11 +98,15 @@
    "outputs": [],
    "source": [
     "def controle_bool(v):\n",
-    "    if isinstance(v, bool): return v\n",
-    "    if isinstance(v, (int, float)): return bool(v)\n",
-    "    if v is None: return False\n",
+    "    if isinstance(v, bool):\n",
+    "        return v\n",
+    "    if isinstance(v, (int, float)):\n",
+    "        return bool(v)\n",
+    "    if v is None:\n",
+    "        return False\n",
     "    s = str(v).strip().lower()\n",
-    "    return s in (\"1\",\"true\",\"yes\",\"y\",\"t\")\n",
+    "    return s in (\"1\", \"true\", \"yes\", \"y\", \"t\")\n",
+    "\n",
     "\n",
     "controle_bool_udf = udf(controle_bool, BooleanType())"
    ]
@@ -119,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customers_df_active = customers_df.filter(col('is_active'))"
+    "customers_df_active = customers_df.filter(col(\"is_active\"))"
    ]
   },
   {
@@ -129,9 +138,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "refunds_df = refunds_df.withColumn('amount', col('amount').cast(\"double\")).na.fill({\"amount\": 0.0})\n",
-    "refunds_df = refunds_df.withColumn('created_at', col('created_at').cast(\"string\"))\n",
-    "                                                                                   "
+    "refunds_df = refunds_df.withColumn(\"amount\", col(\"amount\").cast(\"double\")).na.fill(\n",
+    "    {\"amount\": 0.0}\n",
+    ")\n",
+    "refunds_df = refunds_df.withColumn(\"created_at\", col(\"created_at\").cast(\"string\"))"
    ]
   },
   {
@@ -141,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_df_paid = orders_df.filter(col('payment_status') == 'paid')"
+    "orders_df_paid = orders_df.filter(col(\"payment_status\") == \"paid\")"
    ]
   },
   {
@@ -152,7 +162,9 @@
    "outputs": [],
    "source": [
     "orders_exploded = orders_df.withColumn(\"items\", explode(\"items\"))\n",
-    "orders_flat = orders_exploded.select(\"order_id\",\"channel\", \"created_at\", \"customer_id\", \"payment_status\", \"items.*\")"
+    "orders_flat = orders_exploded.select(\n",
+    "    \"order_id\", \"channel\", \"created_at\", \"customer_id\", \"payment_status\", \"items.*\"\n",
+    ")"
    ]
   },
   {
@@ -168,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_neg = orders_flat.filter(col('unit_price') < 0)"
+    "orders_neg = orders_flat.filter(col(\"unit_price\") < 0)"
    ]
   },
   {
@@ -178,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_pos = orders_flat.filter(col('unit_price') >= 0)"
+    "orders_pos = orders_flat.filter(col(\"unit_price\") >= 0)"
    ]
   },
   {
@@ -189,7 +201,7 @@
    "outputs": [],
    "source": [
     "before = orders_pos.count()\n",
-    "#orders_unique = orders_pos.sort_values([\"order_id\", \"created_at\"])"
+    "# orders_unique = orders_pos.sort_values([\"order_id\", \"created_at\"])"
    ]
   },
   {
@@ -200,7 +212,9 @@
    "outputs": [],
    "source": [
     "w = Window.partitionBy(\"order_id\").orderBy(\"created_at\")\n",
-    "orders_df = orders_pos.withColumn(\"rn\", row_number().over(w)).filter(col(\"rn\") == 1).drop(\"rn\")\n"
+    "orders_df = (\n",
+    "    orders_pos.withColumn(\"rn\", row_number().over(w)).filter(col(\"rn\") == 1).drop(\"rn\")\n",
+    ")"
    ]
   },
   {
@@ -230,8 +244,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders_df = orders_df.withColumn('line_gross', col('qty')*col('unit_price'))\n",
-    "per_order_df = orders_df.groupBy(\"order_id\", \"customer_id\", \"channel\", \"created_at\").agg(F_sum(\"qty\").alias(\"items_sold\"), F_sum(\"line_gross\").alias(\"gross_revenue_eur\"))"
+    "orders_df = orders_df.withColumn(\"line_gross\", col(\"qty\") * col(\"unit_price\"))\n",
+    "per_order_df = orders_df.groupBy(\n",
+    "    \"order_id\", \"customer_id\", \"channel\", \"created_at\"\n",
+    ").agg(F_sum(\"qty\").alias(\"items_sold\"), F_sum(\"line_gross\").alias(\"gross_revenue_eur\"))"
    ]
   },
   {
@@ -241,7 +257,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_orders_customers = per_order_df.join(customers_df_active, per_order_df.customer_id == customers_df_active.customer_id, how='left')"
+    "df_orders_customers = per_order_df.join(\n",
+    "    customers_df_active,\n",
+    "    per_order_df.customer_id == customers_df_active.customer_id,\n",
+    "    how=\"left\",\n",
+    ")"
    ]
   },
   {
